--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,11 @@
 <resources>
     <string name="app_name">First_App</string>
     <string name="nmedia">NMedia!</string>
+    <string name="description_post_author_avatar">Post author avatar</string>
+    <string name="description_post_menu">Post menu</string>
+    <string name="description_likeIcon">Like button</string>
+    <string name="description_commentsIcon">Comment button</string>
+    <string name="description_shareIcon">Share button</string>
+    <string name="description_watchIcon">Watch Icon</string>
+
 </resources>
