--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -8,4 +8,11 @@
     <string name="description_commentsIcon">Кнопка комментария</string>
     <string name="description_shareIcon">Кнопка \"поделиться\"</string>
     <string name="description_watchIcon">Иконка \"количество просмотров\"</string>
+    <string name="menu_remove">Удалить</string>
+    <string name="post_text">Текст поста</string>
+    <string name="menu_edit">Редактировать</string>
+    <string name="error_empty_content">Поле не может быть пустым</string>
+    <string name="save_the_changes">Сохранить изменения</string>
+    <string name="cancel_the_changes">Отменить изменения</string>
+    <string name="cancel">Отменить изменения</string>
 </resources>
