--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -12,7 +12,11 @@
     <string name="post_text">Текст поста</string>
     <string name="menu_edit">Редактировать</string>
     <string name="error_empty_content">Поле не может быть пустым</string>
-    <string name="save_the_changes">Сохранить изменения</string>
-    <string name="cancel_the_changes">Отменить изменения</string>
+    <string name="description_cancel_the_changes">Отменить изменения</string>
     <string name="cancel">Отменить изменения</string>
+    <string name="add_post">Добавить пост</string>
+    <string name="description_save_the_changes">Сохранить изменения</string>
+    <string name="chooser_share_post">Поделиться</string>
+    <string name="save">Сохранить</string>
+    <string name="chooser_view_link">Открыть с помощью</string>
 </resources>
