--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -29,6 +29,8 @@
     <string name="no_posts">Нет постов</string>
     <string name="update_posts_button">Кнопка обновить посты</string>
     <string name="new_posts">Свежие посты</string>
-
+    <string name="description_select_photo">Выбрать фото</string>
+    <string name="description_take_photo">Сделать фото</string>
+    <string name="description_photo">Фотография</string>
 
 </resources>
