--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,6 +32,17 @@
     <string name="description_select_photo">Select photo</string>
     <string name="description_take_photo">Take photo</string>
     <string name="description_photo">Photo</string>
+    <string name="sign_in">Sign in</string>
+    <string name="sign_up">Sign up</string>
+    <string name="sign_out">Sign out</string>
+    <string name="menu_authorization">Menu Authorization</string>
+    <string name="Login">Your login</string>
+    <string name="password">Password</string>
+    <string name="sign_in_to_proceed">Sign in to proceed</string>
+    <string name="no_thank_you">No, thank you</string>
+    <string name="confirm_your_password">Confirm your password</string>
+    <string name="your_name">Your name</string>
+    <string name="remove_photo">Remove photo</string>
 
 
 </resources>
